testsuite/poke.pkl/in-diag-3.pk
/* { dg-do compile } */

var foo = 10 in  /* { dg-error "invalid operand.*\n.*expected string" } */
             ["a","b","c"];
